--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>Scraping Medical News Today!</title>
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
-</HTML>
+<html lang="en-us">
+  <head>
+    <meta charset="UTF-8">
+    <title>Scraping With Mongoose</title>
+    <link href="https://fonts.googleapis.com/css?family=Bubblegum+Sans|Bungee+Inline|Cabin+Sketch|Ewert|Faster+One|Love+Ya+Like+A+Sister|Monoton|Rye|Sigmar+One" rel="stylesheet">
+    <!-- CSS STYLESHEET -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  </head>
+  <body>
+    <div id="wrapper">
+      <div class="heading">
+        <h1><u>Medical News Today Scraper</u></h1>
+        <h2><i>Take notes on your news if you'd like!</i></h2>
+        <h6> News Scraped From: www.medicalnewstoday.com </h6>
+        
+      </div class="content">
+      
+      {{{body}}} 
+      
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+    <!-- <script src="app.js"></script>  -->
+  </body>
+</html>
